--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ matrix:
       env: SOUND=sound.alsa
     - os: linux
       compiler: gcc
+      addons:
+        apt:
+          packages:
+            - g++-mingw-w64
       env:
         - SOUND=sound.exe
         - WINCXX=i686-w64-mingw32-g++
