--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
       compiler: i586-mingw32msvc-g++
       env:
         - SOUND=sound.exe
+        - WINCXX=i586-mingw32msvc-g++
     - os: osx
       env: SOUND=sound.mac
 
